Fix missing billing address after editing a credit card.

A billing address of a credit card is now kept after editing the credit
card using the web UI.

R=stevenjb@chromium.org
Bug: 788286
Change-Id: Ic3f5ee1ae180cef84b50fc9c859757def7af1efa
TEST=Please follow the steps described in the issue 788286; a billing
address should be bound to an edited credit card.